添加接受消息服务的查询数据功能

--- a/testthymeleaf/src/main/resources/templates/receiver/dockerFile.vm
+++ b/testthymeleaf/src/main/resources/templates/receiver/dockerFile.vm
@@ -1,4 +1,4 @@
 FROM java:8
-ADD ${receiverCodeArtifactId}-${receiverCodeVersion}.jar /app.jar
+ADD ${receiverCodeArtifactId}-${receiverCodeVersion}.jar /${receiverCodeArtifactId}.jar
 EXPOSE $receiverServerPort
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/${receiverCodeArtifactId}.jar"]
