--- a/testthymeleaf/src/main/resources/templates/receiver/ReceiverServiceClass.vm
+++ b/testthymeleaf/src/main/resources/templates/receiver/ReceiverServiceClass.vm
@@ -4,7 +4,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import ${basePackage}.${receiverObjName}Application;
@@ -22,6 +22,10 @@ public class SaveInfoService {
 	#foreach($logFile in $logFiles)
 	public  Mono<${logFile.beanName}> save${logFile.beanName}(${logFile.beanName} msg) {
 		return db${logFile.beanName}.save(msg);
+	}
+	
+	public  Flux<${logFile.beanName}> getAll${logFile.beanName}() {
+		return db${logFile.beanName}.findAll();
 	}
 	#end
 	
