--- a/testthymeleaf/src/main/resources/templates/receiver/pom.vm
+++ b/testthymeleaf/src/main/resources/templates/receiver/pom.vm
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+		<docker.image.prefix>$receiverDockerHost</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -73,11 +74,11 @@
 			    <configuration>
 			    	<!-- 注意imageName一定要是符合正则[a-z0-9-_.]的，否则构建不会成功 --> 
 					<!-- 详见：https://github.com/spotify/docker-maven-plugin Invalid repository name ... only [a-z0-9-_.] are allowed -->
-					<!-- 如果要将docker镜像push到DockerHub上去的话，这边的路径要和repo路径一致 --> 
-					<serverId>docker-registry</serverId>
-					<pushImage>true</pushImage>
-					<imageName>$receiverDockerHost:$receiverDockerPort/${project.artifactId}:${project.version}</imageName>
+					<!-- 如果要将docker镜像push到DockerHub上去的话，这边的路径要和repo路径一致 
 					<dockerHost>http://$receiverDockerHost:2375</dockerHost>
+					--> 
+					<pushImage>true</pushImage>
+					<imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</imageName>
 					<!-- 指定Dockerfile所在的路径 --> 
 					<dockerDirectory>${basedir}/src/main/resources</dockerDirectory>
 					<resources> 
@@ -87,9 +88,9 @@
 							<include>${project.build.finalName}.jar</include> 
 						</resource> 
 					</resources> 
-					<!-- 以下两行是为了docker push到DockerHub使用的。 
+					<!-- 以下两行是为了docker push到DockerHub使用的。 -->
 					<serverId>docker-hub</serverId> 
-					<registryUrl>https://index.docker.io/v1/</registryUrl>  -->
+					<registryUrl>https://index.docker.io/v1/</registryUrl>  
 			    </configuration>
 			</plugin>
 		</plugins>
