修改文件配置

--- a/testthymeleaf/src/main/resources/templates/receiver/dockerFile.vm
+++ b/testthymeleaf/src/main/resources/templates/receiver/dockerFile.vm
@@ -1,4 +1,4 @@
-FROM java:8
+FROM wangyuheiyi/myalpine-java8:latest
 ADD ${receiverCodeArtifactId}-${receiverCodeVersion}.jar /${receiverCodeArtifactId}.jar
 EXPOSE $receiverServerPort
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/${receiverCodeArtifactId}.jar"]
